Don't create a new temp profile when --workdir is used to launch Konsole

Instead set the Session initial working directory.

BUG: 435537
BUG: 419859
CCBUG: 433160